<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jp.tazan.liteservicedemo.activity.AboutActivity">

    <ImageView
        android:id="@+id/about_layout"
        android:layout_width="258dp"
        android:layout_height="166.0dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5.0dip"
        android:src="@mipmap/tazan_slogan" />

    <LinearLayout
        android:layout_below="@id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/corner_no_fill">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/rl_help"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/help"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5.0dip"
                android:background="@mipmap/arrow_right"
                android:gravity="center_vertical" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/rl_website"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/visit_website"
                />
            <ImageView
                android:id="@+id/visit_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5.0dip"
                android:background="@mipmap/website"
                android:gravity="center_vertical" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/rl_phone"
            >

            <TextView
                android:id="@+id/customer_service_tel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/customer_servicephone"
                />

            <TextView
                android:id="@+id/customer_service_tel_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:layout_toRightOf="@id/customer_service_tel_text"
                android:gravity="center_vertical"
                android:text="@string/service_tel"
                android:textSize="16.0dip"
                android:textColor="#ffff5959"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5.0dip"
                android:background="@mipmap/phone"
                android:gravity="center_vertical" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottompart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3.0dip"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/versionbuild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal"
            android:textSize="@dimen/font_sp_12" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip"
            android:text="@string/about_message"
            android:textColor="@color/teal"
            android:textSize="@dimen/font_sp_10" />
    </LinearLayout>

</RelativeLayout>
